# data_exploration

./: Base_sirene_V3.ipynb  Data_Profiling.ipynb  Enseignement Superieur.ipynb  Enseignement Superieur_V2.ipynb  Environnement.ipynb  README.md  pyproject.toml  scrapping.ipynb  scrapping.py  stats_annuelles.csv  stats_landes.ipynb
analysis/: dataset.py
api_functions/: opendatasoft.py
scrapping/: scrapping_INSEE.py
src/: main.py
src/analysis/: test.py
src/api_functions/: opendatasoft.py
src/scrapping/: scrapping_INSEE.py
