[tool.poetry]
name = "exploration"
version = "0.1.0"
description = ""
authors = ["alexiscampan <alexis.campan@ut-capitole.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
bs4 = "^0.0.1"
pylint = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
